Added Equipment package containing abstract class Item and concrete classes Weapon and Armor. Updated database and created tables connecting Player or Goblin to their inventory items. Updated Attack() to include the use of Weapon.

--- a/ConsoleRpgEntities/ConsoleRpgEntities.csproj
+++ b/ConsoleRpgEntities/ConsoleRpgEntities.csproj
@@ -26,6 +26,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Migrations\Scripts\SeedMonsterItems.rollback.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Migrations\Scripts\SeedMonsterItems.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Migrations\Scripts\SeedPlayerItems.rollback.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Migrations\Scripts\SeedPlayerItems.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Migrations\Scripts\InitialSeedData.rollback.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -53,6 +65,12 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Migrations\Scripts\SeedItemData.rollback.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Migrations\Scripts\SeedItemData.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
